# TiebaContentReviewer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: CI.yml  docker.yml
examples/: grpc_server.py
src/: config.py  functions.py
src/core/: engine.py  provider.py  registry.py  rules.py
src/infra/: db.py  dispatcher.py  redis_client.py  repository.py
src/rpc/: review_service.proto  review_service_pb2.py  review_service_pb2_grpc.py
src/worker/: consumer.py  manager.py
tests/: conftest.py
tests/core/: test_engine.py  test_functions.py  test_provider.py
tests/infra/: test_db.py  test_dispatcher.py  test_redis_client.py  test_repository.py
tests/worker/: test_consumer.py  test_manager.py
